Update Maven Surefire Plugin configuration
Removed the MaxPermSize setting from Maven Surefire Plugin configuration.